# rs-template

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: template_test.rs
